# SPDX-FileCopyrightText: 2026 Foundation Devices Inc.
#
# SPDX-License-Identifier: GPL-3.0-or-later

# (01) magicRecoveryFromFoundationServer
appId: com.foundationdevices.envoy
---

- launchApp:
    clearState: true

# Go to Advanced
- tapOn: Advanced

# Turn off Magic Backup
- tapOn: magic backup
- tapOn:
    id: PopUp Secondary Button
- tapOn: Back
- tapOn: |-
    Create a 
    Mobile Wallet
- tapOn: Recover
###### 12 word err test ENV-2315 #####

# Insert seed words (12 word)
- tapOn: 12 Word Seed
- tapOn: "1. "
- inputText: "bacon"
- tapOn: "2. "
- inputText: "bacon"
- tapOn: "3. "
- inputText: "bacon"
- tapOn: "4. "
- inputText: "bacon"
- tapOn: "5. "
- inputText: "bacon"
- tapOn: "6. "
- inputText: "bacon"
- tapOn: "7. "
- inputText: "bacon"
- tapOn: "8. "
- inputText: "bacon"
- tapOn: "9. "
- inputText: "bacon"
- tapOn: "10. "
- inputText: "bacon"
- tapOn: "11. "
- inputText: "bacon"
- tapOn: "12. "
- inputText: "bacon"

- tapOn: Enter Your Seed
- tapOn: Done

# Check that error popup shows up
- assertVisible: That seed appears to be invalid. Please check the words entered, including the order they are in and try again.
- tapOn: Back

- extendedWaitUntil:
    visible: Back button - Seed
    timeout: 5000

# back to seed menu
- tapOn: Back button - Seed

##############################################################################

############################## 24 word error test ENV-2315 #####

# Insert seed words (24 word)
- tapOn: 24 Word Seed
- tapOn: "1. "
- inputText: "bacon"
- tapOn: "2. "
- inputText: "bacon"
- tapOn: "3. "
- inputText: "bacon"
- tapOn: "4. "
- inputText: "bacon"
- tapOn: "5. "
- inputText: "bacon"
- tapOn: "6. "
- inputText: "bacon"
- tapOn: "7. "
- inputText: "bacon"
- tapOn: "8. "
- inputText: "bacon"
- tapOn: "9. "
- inputText: "bacon"
- tapOn: "10. "
- inputText: "bacon"
- tapOn: "11. "
- inputText: "bacon"
- tapOn: "12. "
- inputText: "bacon"

# Second page of 24 word seed
- tapOn: "13. "
- inputText: "bacon"
- tapOn: "14. "
- inputText: "bacon"
- tapOn: "15. "
- inputText: "bacon"
- tapOn: "16. "
- inputText: "bacon"
- tapOn: "17. "
- inputText: "bacon"
- tapOn: "18. "
- inputText: "bacon"
- tapOn: "19. "
- inputText: "bacon"
- tapOn: "20. "
- inputText: "bacon"
- tapOn: "21. "
- inputText: "bacon"
- tapOn: "22. "
- inputText: "bacon"
- tapOn: "23. "
- inputText: "bacon"
- tapOn: "24. "
- inputText: "hour"

- tapOn: Enter Your Seed
- tapOn: Done

# Check that error popup shows up
- assertVisible: That seed appears to be invalid. Please check the words entered, including the order they are in and try again.
- tapOn: Back
# back to seed menu
- tapOn: Back button - Seed
###################################### end of ENV-2315

###### 12 word valid seed test #####

# Insert seed words (12 word)
- tapOn: 12 Word Seed
- tapOn: "1. "
- inputText: "ripple"
- tapOn: "2. "
- inputText: "bomb"
- tapOn: "3. "
- inputText: "rich"
- tapOn: "4. "
- inputText: "talent"
- tapOn: "5. "
- inputText: "cloth"
- tapOn: "6. "
- inputText: "food"
- tapOn: "7. "
- inputText: "nation"
- tapOn: "8. "
- inputText: "trouble"
- tapOn: "9. "
- inputText: "section"
- tapOn: "10. "
- inputText: "lend"
- tapOn: "11. "
- inputText: "energy"
- tapOn: "12. "
- inputText: "head"
- tapOn: Done

- extendedWaitUntil:
    visible: Magic Backup Detected
    timeout: 30000 # timeout 30 s

# ignore button
- tapOn:
    id: PopUp Secondary Button

- extendedWaitUntil:
    visible: "Import Envoy Backup File"
    timeout: 300000 # timeout 5 min

# Press on the icon to load backup file
- longPressOn: |-
    Import Backup Image

- extendedWaitUntil:
    visible: "Your Mobile Wallet Is Ready"
    timeout: 300000 # timeout 5 min
- tapOn: Continue

# Make sure you are in Home
- assertVisible: ACCOUNTS

# turn Testnet and Signet OFF and ON for the right account order

# go to advanced
- tapOn:
    id: hamburger_menu
- tapOn: |-
    SETTINGS
    SETTINGS
- tapOn: Advanced

# turn them off
- tapOn:
    id: Testnet Toggle-true
- tapOn:
    id: Signet Toggle-true

# refresh the page
- tapOn:
    id: hamburger_menu
- tapOn: |-
    SETTINGS
    SETTINGS
- tapOn: Advanced

# turn them ON again
- tapOn:
    id: Testnet Toggle-false
- tapOn:
    id: PopUp Primary Button

- tapOn:
    id: Signet Toggle-false
- tapOn:
    id: PopUp Primary Button

# disable taproot if enabled
- runFlow:
    when:
      visible:
        id: "Taproot Toggle-true"
    commands:
      - tapOn:
          id: Taproot Toggle-true
      - tapOn:
          id: PopUp Primary Button

# go back to home
- tapOn:
    id: hamburger_menu
- tapOn:
    id: hamburger_menu
