# SPDX-FileCopyrightText: 2026 Foundation Devices Inc.
#
# SPDX-License-Identifier: GPL-3.0-or-later

appId: com.foundationdevices.envoy
---
- launchApp:
    clearState: true # only clear state before first test

# go to Advanced
- tapOn: Advanced
# turn off MB
- tapOn: Magic Backup Toggle
- tapOn: Continue
- tapOn: Back
- tapOn: |-
    Create a 
    Mobile Wallet
- tapOn: Recover
# insert seed words
- tapOn: 12 Word Seed
- tapOn: "1. "
- inputText: "minor"
- tapOn: "2. "
- inputText: "inspire"
- tapOn: "3. "
- inputText: "domain"
- tapOn: "4. "
- inputText: "sport"
- tapOn: "5. "
- inputText: "radio"
- tapOn: "6. "
- inputText: "put"
- tapOn: "7. "
- inputText: "museum"
- tapOn: "8. "
- inputText: "sure"
- tapOn: "9. "
- inputText: "dose"
- tapOn: "10. "
- inputText: "peanut"
- tapOn: "11. "
- inputText: "home"
- tapOn: "12. "
- inputText: "comfort"
- tapOn: Done
- extendedWaitUntil:                                                          
      visible: "Magic Backup Detected"                                                   
      timeout: 5000
- tapOn: Ignore
- extendedWaitUntil:                                                          
      visible: "Import Envoy Backup File"                                                   
      timeout: 5000
#press on the icon to load backup file
- longPressOn: |-
    Import Backup Image
- extendedWaitUntil:                                                          
      visible: "Your Mobile Wallet Is Ready"                                                   
      timeout: 15000
- tapOn: Continue
# Make sure you are in Home
- assertVisible: ACCOUNTS
#- stopApp # uncomment to stop the app after test